# bioPic

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
api/: openapi.yaml
apps/biopic-cli/: cli_commands.cpp  cli_commands.hpp  cli_common.cpp  cli_common.hpp  main.cpp
benchmarks/: CMakeLists.txt  bench_hash.cpp  bench_similarity_search.cpp
bindings/c/include/: biopic.h
bindings/c/src/: biopic_c.cpp
cmake/: CompilerWarnings.cmake  ReleaseOnlyTriplet.cmake  test_cli_database_persistence.cmake
config/: classifier_runtime.conf  model_manifest.example.json
docs/: README.md  api.md  architecture.md  performance.md
docs/adr/: 0001-biopichash-v1.md
include/biopic/: distance.hpp  env.hpp  error.hpp  export.hpp  fingerprint.hpp  hash_parameters.hpp  hasher.hpp  image.hpp  types.hpp  version.hpp
include/biopic/ai/: classification_result.hpp  classifier.hpp  classifier_config.hpp  inference_types.hpp  model.hpp  model_input.hpp  output_mapping.hpp  preprocessing.hpp  runtime.hpp  tensor_contract.hpp
include/biopic/cli/: exit_codes.hpp
include/biopic/database/: database_maintenance.hpp  fingerprint_record.hpp  fingerprint_store.hpp  sqlite_fingerprint_store.hpp
include/biopic/evaluation/: dataset_manifest.hpp  metrics.hpp
include/biopic/index/: bucketed_index.hpp  candidate_verification.hpp  fingerprint_bloom_filter.hpp  fingerprint_bucket.hpp  fingerprint_normalization.hpp  hash_match_config.hpp  similarity_index.hpp
include/biopic/inference/: nudity_classifier.hpp
include/biopic/policy/: moderation_policy.hpp
include/biopic/storage/: hash_store.hpp
src/ai/: classification_result.cpp  classifier.cpp  classifier_config.cpp  model.cpp  output_mapping.cpp  preprocessing.cpp  runtime.cpp  tensor_contract.cpp
src/cli/: exit_codes.cpp
src/core/: error.cpp  parse_double.cpp  parse_double.hpp  version.cpp
src/database/: database_maintenance.cpp  fingerprint_store.cpp  sqlite_fingerprint_store.cpp
src/evaluation/: dataset_manifest.cpp  metrics.cpp
src/hash/: biopic_hasher_v1.cpp  distance.cpp  fingerprint.cpp  fingerprint_codec.cpp  hash_parameters.cpp
src/image/: image_decoder.cpp
src/index/: bucketed_index.cpp  candidate_verification.cpp  fingerprint_bloom_filter.cpp  fingerprint_bucket.cpp  fingerprint_normalization.cpp  hash_match_config.cpp  similarity_index.cpp
src/pipeline/: scanner.cpp  scanner.hpp
src/policy/: moderation_policy.cpp
tests/: CMakeLists.txt
tests/c_smoke/: smoke.c
tests/fixtures/: classifier.conf  identity.biopic.manifest  identity.onnx
tests/fixtures/eval/: manifest.csv
tests/golden/: test_determinism.cpp  test_golden_vectors.cpp  test_transformations.cpp
tests/support/: test_images.cpp  test_images.hpp
tests/unit/: test_bucketed_index.cpp  test_c_abi.cpp  test_classifier.cpp  test_classifier_config.cpp  test_distance.cpp  test_evaluation.cpp  test_fingerprint_codec.cpp  test_fingerprint_store.cpp  test_hasher.cpp  test_image_decoder.cpp  test_model.cpp  test_moderation_policy.cpp  test_onnx_runtime.cpp  test_output_mapping.cpp  test_parse_double.cpp  test_preprocessing.cpp  test_scanner.cpp  test_similarity_index.cpp  test_similarity_index_performance.cpp  test_sqlite_fingerprint_store.cpp  test_tensor_contract.cpp  test_uniform_colors.cpp
